<resources>

    <string-array name="kuaidi">
        <item>请选择快递</item>
        <item>申通快递</item>
        <item>顺丰快递</item>
        <item>圆通快递</item>
        <item>韵达快递</item>
        <item>天天快递</item>
        <item>EMS快递</item>
        <item>中通快递</item>
        <item>汇通快递</item>
        <item>全峰快递</item>
        <item>德邦快递</item>

    </string-array>

    <string-array name="kuaididaima">
        <item>000</item>
        <item>sto</item>
        <item>sf</item>
        <item>yt</item>
        <item>yd</item>
        <item>tt</item>
        <item>ems</item>
        <item>zto</item>
        <item>ht</item>
        <item>qf</item>
        <item>db</item>

    </string-array>

    <string name="app_name">快递到哪啦</string>
    <string name="qingshuruyundanhao">请输入运单号</string>
    <string name="dengluhuoqu">登录获取更多内容</string>
    <string name="zhuizonggaidingdan">追踪该订单</string>
    <string name="wujieguo">无结果</string>
    <string name="zhanghao">用户名/邮箱</string>
    <string name="mima">密码</string>
    <string name="querenmima">确认密码</string>
    <string name="shoujihao">手机号码</string>
    <string name="denglu">登录</string>
    <string name="quit">退出</string>
    <string name="help">帮助</string>
    <string name="注册">注册</string>
    <string name="string_help_text">当前应用缺少必要的权限</string>
    <string name="settings">设置</string>
    <string name="zhuce">注册</string>
    <string name="shouye">首页</string>
    <string name="err_bunengweikong">用户名不能为空</string>
    <string name="err_mimabunengweikong">密码不能为空</string>
    <string name="err_liangcimimabuyizhi">两次输入的密码不一致</string>
    <string name="zhuxiao">注销</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
