<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_black_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UI.ViewActivity.FirstPageActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_gray_edittext"
        android:hint="@string/qingshuruyundanhao"
        android:textColor="@color/ziti_shense"
        android:inputType="number"
        android:id="@+id/edit_yundan"
        android:textColorHint="@color/ziti_shense" />

    <Spinner
        android:layout_width="100dp"
        android:background="@drawable/border_gray_edittext"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        style="@style/spinner_style"
        android:animationCache="true"
        android:entries="@array/kuaidi"
        android:layout_marginTop="15dp"

        android:layout_below="@+id/edit_yundan"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wujieguo"
        android:textSize="15sp"
        android:id="@+id/text_wujieguo"
        android:textColor="@color/ziti_shense"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="141dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_first_page"
        android:layout_above="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_below="@+id/spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dengluhuoqu"
        android:textSize="15sp"

        android:textColor="@color/ziti_shense"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />


</RelativeLayout>
